objects/Safety__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Visit_Date__c</fullName>
        <inlineHelpText>Only if required</inlineHelpText>
        <label>Additional Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Visit_Details__c</fullName>
        <label>Additional Visit Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area_for_Improvement_10__c</fullName>
        <label>Area for Improvement 10.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Area_for_Improvement_1__c</fullName>
        <label>Area for Improvement 1.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Area_for_Improvement_2__c</fullName>
        <label>Area for Improvement 2.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Categorization__c</fullName>
        <label>Categorization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Requested Site Visit</fullName>
                </value>
                <value>
                    <fullName>Confined Space Training</fullName>
                </value>
                <value>
                    <fullName>CPR/First Aid Training/Certification</fullName>
                </value>
                <value>
                    <fullName>Excavation Training</fullName>
                </value>
                <value>
                    <fullName>Fall Protection Training</fullName>
                </value>
                <value>
                    <fullName>Fire Extinguisher Training</fullName>
                </value>
                <value>
                    <fullName>Forklift Training/Certification</fullName>
                </value>
                <value>
                    <fullName>OSHA 10 &amp; 30 Hour Training/Certification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Post-Accident Site Visit</fullName>
                </value>
                <value>
                    <fullName>Prospective Client Insurance Services/BDM Site Visit</fullName>
                </value>
                <value>
                    <fullName>Random Site Visit</fullName>
                </value>
                <value>
                    <fullName>Repiratory Protection Fit Testing/Program Assistance</fullName>
                </value>
                <value>
                    <fullName>Safety Program Assistance</fullName>
                </value>
                <value>
                    <fullName>Safety Resources CD/Forms</fullName>
                </value>
                <value>
                    <fullName>Scaffolding Training</fullName>
                </value>
                <value>
                    <fullName>Site Safety Meeting</fullName>
                </value>
                <value>
                    <fullName>Substance Abuse Policy Acknowledgement</fullName>
                </value>
                <value>
                    <fullName>Scheduled Site Visit</fullName>
                    <default>true</default>
                    <label>Scheduled Site Visit</label>
                </value>
                <value>
                    <fullName>AED/CPR/First Aid Training/Certification</fullName>
                </value>
                <value>
                    <fullName>BBP/CPR/First Aid Training/Certification</fullName>
                </value>
                <value>
                    <fullName>HAZWOPER 8HR</fullName>
                </value>
                <value>
                    <fullName>HAZWOPER 40HR</fullName>
                </value>
                <value>
                    <fullName>Bloodborne Pathogens</fullName>
                </value>
                <value>
                    <fullName>Post Accident Phone Call</fullName>
                </value>
                <value>
                    <fullName>Safety Program Manual</fullName>
                </value>
                <value>
                    <fullName>Forklift Training-Recertification</fullName>
                </value>
                <value>
                    <fullName>Safety Performance Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Safety's</relationshipLabel>
        <relationshipName>Safety_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <label>Contact 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Actual contact worked with for the site visit</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Safety</relationshipLabel>
        <relationshipName>Safety</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accident Review</fullName>
                </value>
                <value>
                    <fullName>AM Referral</fullName>
                </value>
                <value>
                    <fullName>Client Services Referral</fullName>
                </value>
                <value>
                    <fullName>Risk Profiled 1</fullName>
                </value>
                <value>
                    <fullName>Risk Profiled 2</fullName>
                </value>
                <value>
                    <fullName>New Client 1</fullName>
                </value>
                <value>
                    <fullName>New Client 2</fullName>
                </value>
                <value>
                    <fullName>New Client 3</fullName>
                </value>
                <value>
                    <fullName>Special Request</fullName>
                </value>
                <value>
                    <fullName>Rollover prior Qtr</fullName>
                </value>
                <value>
                    <fullName>Visits On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Other services</description>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accident Follow Up</fullName>
                </value>
                <value>
                    <fullName>Healthcare Seminar</fullName>
                </value>
                <value>
                    <fullName>Sub contractor services</fullName>
                </value>
                <value>
                    <fullName>Service fee applied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_Notes_HR_Issues__c</fullName>
        <label>Follow-up Notes/HR Issues</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspector__c</fullName>
        <label>Inspector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tom Ashe</fullName>
                </value>
                <value>
                    <fullName>Jeff Matsumoto</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>Joe Dumapit</fullName>
                </value>
                <value>
                    <fullName>Jeff &amp; Joe</fullName>
                </value>
                <value>
                    <fullName>Deb DiNardi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_E_mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal E-mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Island__c</fullName>
        <formula>IF(Cost_Center__c =1, "Oahu",
if(Cost_Center__c =2, "Kailua-Kona, Big Island",
if(Cost_Center__c =3, "Kahului, Maui",
if(Cost_Center__c =5, "Lanai",
if(Cost_Center__c =21, "Hilo, Big Island",
if(Cost_Center__c =4, "Kapaa, Kauai",""))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Island</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Positive_Safety_Practice_10__c</fullName>
        <label>Type of work being performed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Positive_Safety_Practice_2__c</fullName>
        <label>Positive Safety Practice 2.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Positive_Safety_Practice_3__c</fullName>
        <label>Positive Safety Practice 3.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Positive_Safety_Practice_X1__c</fullName>
        <label>Positive Safety Practice 1.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Safety_Violations_1__c</fullName>
        <inlineHelpText>HIOSH Rules</inlineHelpText>
        <label>Possible Safety Violations 1.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Safety_Violations_2__c</fullName>
        <inlineHelpText>HIOSH Rules</inlineHelpText>
        <label>Possible Safety Violations 2.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Safety_Violations_3__c</fullName>
        <inlineHelpText>HIOSH Rules</inlineHelpText>
        <label>Possible Safety Violations 3.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_Visit_E_Mail_Notes__c</fullName>
        <label>Post-Visit E-Mail Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Visit_E_mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Visit E-mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Visit_E_Mail_Notes__c</fullName>
        <label>Pre-Visit E-mail Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_visit_E_mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-visit E-mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Assurance_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if selected for Quality Assurance Review</inlineHelpText>
        <label>Quality Assurance Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Accounts__c</fullName>
        <label>Related Accounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Visit__c</fullName>
        <label>Scheduled Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Notes__c</fullName>
        <label>Site Visit Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Visit Declined</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Option_CPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Option - CPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Option_Fall_Protection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Option - Fall Protection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Option_Fire_Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Option - Fire Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Option_Forklift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Option - Forklift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Option_Safety_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Option - Safety Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Flag__c</fullName>
        <formula>IF(ISPICKVAL( Visit_Score__c , "Evident Safety Violations"),
IMAGE("/img/samples/light_red.gif", "red", 15, 35),
IF(ISPICKVAL( Visit_Score__c , "Recommend Improvements"),
IMAGE("/img/samples/light_yellow.gif", "yellow", 15, 35),
IF(ISPICKVAL( Visit_Score__c , "None"),null,
IMAGE("/img/samples/light_green.gif", "green", 15, 35))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_History_Concerns__c</fullName>
        <inlineHelpText>Important notes from prior visits</inlineHelpText>
        <label>Visit History/Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visit_Length__c</fullName>
        <label>Visit Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>105</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>165</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>195</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>225</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Quarter__c</fullName>
        <inlineHelpText>Quarter inwhich the visit took place.</inlineHelpText>
        <label>Visit Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Quarter</fullName>
                </value>
                <value>
                    <fullName>2nd Quarter</fullName>
                </value>
                <value>
                    <fullName>3rd Quarter</fullName>
                </value>
                <value>
                    <fullName>4th Quarter</fullName>
                </value>
                <value>
                    <fullName>2010 1st Quarter</fullName>
                </value>
                <value>
                    <fullName>2010 2nd Quarter</fullName>
                </value>
                <value>
                    <fullName>2010 3rd Quarter</fullName>
                </value>
                <value>
                    <fullName>2010 4th Quarter Visits</fullName>
                </value>
                <value>
                    <fullName>2011 1st Quarter</fullName>
                </value>
                <value>
                    <fullName>2011 2nd Quarter</fullName>
                </value>
                <value>
                    <fullName>2011 3rd Quarter</fullName>
                </value>
                <value>
                    <fullName>2011 4th Quarter</fullName>
                </value>
                <value>
                    <fullName>2012 1st Quarter</fullName>
                </value>
                <value>
                    <fullName>2012 2nd Quarter</fullName>
                </value>
                <value>
                    <fullName>2012 3rd Quarter</fullName>
                </value>
                <value>
                    <fullName>2012 4th Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Score__c</fullName>
        <label>Visit Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safe Worksite</fullName>
                </value>
                <value>
                    <fullName>Evident Safety Violations</fullName>
                </value>
                <value>
                    <fullName>Recommend Improvements</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>used for Safety Site Visit logging.</description>
    <label>Safety</label>
    <nameField>
        <label>Site Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Safety</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Categorization__c</columns>
        <columns>Inspector__c</columns>
        <columns>Process_Complete__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X1st_Quarter_Visits</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>1st Quarter</value>
        </filters>
        <label>1st Quarter Visits</label>
    </listViews>
    <listViews>
        <fullName>X2010_1st_Quarter_Visit</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Categorization__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2010 1st Quarter</value>
        </filters>
        <label>2010 1st Quarter Visit</label>
    </listViews>
    <listViews>
        <fullName>X2010_2nd_Quarter_Visit</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Categorization__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2010 2nd Quarter</value>
        </filters>
        <label>2010 2nd Quarter Visit</label>
    </listViews>
    <listViews>
        <fullName>X2010_3rd_Quarter_Visits</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Categorization__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <columns>Client_Letter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2010 3rd Quarter</value>
        </filters>
        <label>2010 3rd Quarter Visits</label>
    </listViews>
    <listViews>
        <fullName>X2010_4th_Quarter_Visits</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Categorization__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <columns>Client_Letter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2010 4th Quarter Visits</value>
        </filters>
        <label>2010 4th Quarter Visits</label>
    </listViews>
    <listViews>
        <fullName>X2010_All_Quarters</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Categorization__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>startsWith</operation>
            <value>2010</value>
        </filters>
        <label>2010 All Quarters</label>
    </listViews>
    <listViews>
        <fullName>X2011_1st_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Categorization__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2011 1st Quarter</value>
        </filters>
        <label>2011 1st Quarter</label>
    </listViews>
    <listViews>
        <fullName>X2011_2nd_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Categorization__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2011 2nd Quarter</value>
        </filters>
        <label>2011 2nd Quarter</label>
    </listViews>
    <listViews>
        <fullName>X2011_3rd_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Categorization__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2011 3rd Quarter</value>
        </filters>
        <label>2011 3rd Quarter</label>
    </listViews>
    <listViews>
        <fullName>X2011_4th_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Categorization__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2011 4th Quarter</value>
        </filters>
        <label>2011 4th Quarter</label>
    </listViews>
    <listViews>
        <fullName>X2011_All_Quarters</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Categorization__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>startsWith</operation>
            <value>2011</value>
        </filters>
        <label>2011 All Quarters</label>
    </listViews>
    <listViews>
        <fullName>X2nd_Quarter_Visits</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2nd Quarter</value>
        </filters>
        <label>2nd Quarter Visits</label>
    </listViews>
    <listViews>
        <fullName>X3rd_Quarter_Visits</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Categorization__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>3rd Quarter</value>
        </filters>
        <label>3rd Quarter Visits</label>
    </listViews>
    <listViews>
        <fullName>X4th_Quarter_Visits</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Inspector__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Status__c</columns>
        <columns>Island__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>4th Quarter</value>
        </filters>
        <label>4th Quarter Visits</label>
    </listViews>
</CustomObject>